Fixed output panel white scrollbar corner

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,6 +39,10 @@ body {
   overflow: auto !important;
 }
 
+.CodeMirror-scrollbar-filler {
+  background: $scrollBarBackground;
+}
+
 .horizontal, .welcomePageContentRight, .pt-button, .pt-tree-node-content, .pt-tab
 , .bp-table-body {
   overflow: hidden !important;
